--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="profile">Profile</string>
     <string name="services">Services</string>
     <string name="filters">Filters</string>
+    <string name="what_are_you_looking_for">WHAT ARE YOU LOOKING FOR?</string>
+    <string name="or_not">or not</string>
+    <string name="explore_more">Explore More</string>
 </resources>
